--- a/ipv6_nat/PKGBUILD
+++ b/ipv6_nat/PKGBUILD
@@ -2,7 +2,7 @@
 # Package Maintainer: justzx <justzx2011@gmail.com>
 pkgname=ipv6_nat
 #true && pkgname=('ipv6_nat-c++')
-pkgver=	ipv6_nat-0.0.15
+pkgver=	0.0.15
 pkgrel=1
 pkgdesc=""
 arch=('x86_64' 'i686')
@@ -11,23 +11,23 @@ license=('LGPL3')
 depends=('')
 install="ipv6_nat.install"
 source=("https://github.com/justzx2011/PackageScripts/tarball/$pkgver")
-md5sums=('683081643a1c0291bd684063bf3c8557')
+md5sums=('')
 package() {
-  cd ${srcdir}/justzx2011-openyoudao-*/
-  # bin
-  install -Dm755 scripts/openyoudao \
-    "$pkgdir/usr/bin/openyoudao"
-  # libs
-  #/var/cache/openyoudao#
-  install -d "$pkgdir/usr/lib/openyoudao"
-  install -Dm644 ./*.py \
-    "$pkgdir/usr/lib/openyoudao"
-  install -d "$pkgdir/var/cache/openyoudao"
-  cp -rf cache/* "$pkgdir/var/cache/openyoudao/."
-  chmod -R 755 "$pkgdir/var/cache/openyoudao"
-  #install -dm644 cache/* \
-  #  "$pkgdir/usr/lib/python2.7/site-packages/openyoudao/cache"
-  # desktop file
-  install -Dm644 desktop/openyoudao.desktop \
-    "$pkgdir/usr/share/applications/openyoudao.desktop"
+#  cd ${srcdir}/justzx2011-openyoudao-*/
+#  # bin
+#  install -Dm755 scripts/openyoudao \
+#    "$pkgdir/usr/bin/openyoudao"
+#  # libs
+#  #/var/cache/openyoudao#
+#  install -d "$pkgdir/usr/lib/openyoudao"
+#  install -Dm644 ./*.py \
+#    "$pkgdir/usr/lib/openyoudao"
+#  install -d "$pkgdir/var/cache/openyoudao"
+#  cp -rf cache/* "$pkgdir/var/cache/openyoudao/."
+#  chmod -R 755 "$pkgdir/var/cache/openyoudao"
+#  #install -dm644 cache/* \
+#  #  "$pkgdir/usr/lib/python2.7/site-packages/openyoudao/cache"
+#  # desktop file
+#  install -Dm644 desktop/openyoudao.desktop \
+#    "$pkgdir/usr/share/applications/openyoudao.desktop"
 }
